# esp32-macro-keyboard

./: .clang-format  .clang-tidy  .cmake-format.py  .env.example  .gitignore  .yamllint.yml  README.md
.github/workflows/: README.md  device-tests-build.yml  host-tests.yml  materialize-mockups.yml  quality.yml
docs/: API.md  DEVELOPMENT.md  FRONTEND_TESTS_PROGRESS.md  HARDWARE_TEST_PLAN.md  IMPLEMENTATION_STATUS.md  MACRO_LANGUAGE.md  README.md  RECOVERY.md  RELEASE_NOTES.md  SECURITY_REVIEW.md  SPEC.md  TODO.md  TODO_EVIDENCE.md  UNIT_TESTS1_PROGRESS.md  UNIT_TESTS1_TODO.md
docs/mockups/: README.md
docs/schemas/: all-data-backup.schema.json  diagnostic-report.schema.json  macro-set-package.schema.json
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/components/: README.md
firmware/components/app_core/: CMakeLists.txt  README.md  app_core.c  app_core_ops.h  app_core_sequence.c  app_core_sequence.h
firmware/components/app_core/include/: app_core.h
firmware/components/auth/: CMakeLists.txt  README.md  auth.c  auth_core.c  auth_core.h  auth_core_common.inc  auth_core_internal.h  auth_core_password.inc  auth_core_rate_limit.inc  auth_core_session.inc  auth_ops.h
firmware/components/auth/include/: auth.h
firmware/components/device_controls/: CMakeLists.txt  README.md  device_controls.c  device_controls_logic.c  device_controls_logic.h
firmware/components/device_controls/include/: device_controls.h
firmware/components/macro_executor/: CMakeLists.txt  README.md  macro_executor.c  macro_executor_engine.c  macro_executor_engine.h  macro_executor_ops.h
firmware/components/macro_executor/include/: macro_executor.h
firmware/components/macro_model/: CMakeLists.txt  README.md  app_error.c  app_uuid.c  macro_model.c
firmware/components/macro_model/include/: app_error.h  app_uuid.h  macro_limits.h  macro_model.h
firmware/components/macro_parser/: CMakeLists.txt  README.md  macro_keymap_us.c  macro_parser.c
firmware/components/macro_parser/include/: macro_keymap_us.h  macro_parser.h
firmware/components/storage/: CMakeLists.txt  README.md  storage_atomic.c  storage_atomic_internal.h  storage_fs_ops.c  storage_fs_ops.h  storage_mount.c  storage_paths.c  storage_quarantine.c  storage_quarantine_internal.h  storage_repository_index.c  storage_repository_internal.h  storage_repository_io.c  storage_repository_io_ops.h  storage_repository_io_v2.c  storage_repository_json.c  storage_repository_sets.c  storage_transaction.c  storage_transaction_internal.h
firmware/components/storage/include/: storage.h  storage_repository.h
firmware/components/usb_keyboard/: CMakeLists.txt  README.md  usb_descriptors.c  usb_keyboard.c  usb_keyboard_ops.h  usb_keyboard_state.c  usb_keyboard_state.h
firmware/components/usb_keyboard/include/: usb_descriptors.h  usb_keyboard.h
firmware/components/web_server/: CMakeLists.txt  README.md  web_content.c  web_content.h  web_cookie.c  web_cookie.h  web_origin.c  web_origin.h  web_server.c  web_server_adapter.c  web_server_adapter.h  web_server_adapter_body_auth.inc  web_server_adapter_common.inc  web_server_adapter_json.inc  web_server_adapter_lifecycle.inc  web_server_adapter_static_stream.inc  web_server_cancel.inc  web_server_common.inc  web_server_lifecycle.inc  web_server_login_1.inc  web_server_login_2.inc  web_server_login_3.inc  web_server_logout_execution.inc  web_server_static.inc  web_server_status_limits.inc  web_static_path.c  web_static_path.h
firmware/components/web_server/include/: web_server.h
firmware/components/wifi_ap/: CMakeLists.txt  README.md  wifi_ap.c  wifi_ap_ops.h  wifi_ap_state.c  wifi_ap_state.h
firmware/components/wifi_ap/include/: wifi_ap.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  README.md  app_main.c  idf_component.yml
firmware/test_app/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/test_app/main/: CMakeLists.txt  idf_component.yml  test_auth.c  test_limits.c  test_macro_executor.c  test_macro_parser.c  test_main.c  test_usb_state.c  test_uuid.c
firmware/webfs/: README.md
scripts/: README.md  bootstrap-repo.sh  build-device-tests.sh  check-all.sh  check-docs.sh  check-firmware.sh  check-format.sh  check-partitions.sh  check-scripts.sh  check-webapp.sh  install-esp-idf.sh  run-tests.sh  verify-no-remote-assets.sh  verify-toolchain.sh
tests/: README.md
tests/host/: CMakeLists.txt  README.md  auth_additional_password_tests.inc  auth_additional_rate_tests.inc  auth_additional_session_tests.inc  auth_existing_tests.inc  auth_test_fixture.inc  executor_execution_tests.inc  executor_terminal_tests.inc  executor_test_fixture.h  executor_test_fixture.inc  executor_validation_tests.inc  test_app_core.c  test_auth.c  test_device_controls.c  test_macro_executor.c  test_macro_model.c  test_macro_parser.c  test_storage_atomic.c  test_storage_parent_sync.c  test_storage_quarantine.c  test_storage_repository.c  test_storage_repository_io.c  test_storage_transactions.c  test_support.c  test_usb_keyboard.c  test_web_security.c  test_web_server_adapter.c  test_web_server_adapter_auth.inc  test_web_server_adapter_body.inc  test_web_server_adapter_json_static.inc  test_web_server_adapter_main.inc  test_web_server_adapter_stream_lifecycle.inc  test_wifi_ap.c  web_security_content.inc  web_security_cookie.inc  web_security_main.inc  web_security_origin.inc  web_security_static.inc
tests/host/fakes/: fake_call_log.c  fake_call_log.h  fake_clock.c  fake_clock.h  fake_freertos.c  fake_freertos.h  fake_fs_backend.c  fake_fs_backend.h  fake_gpio_backend.c  fake_gpio_backend.h  fake_http_backend.c  fake_http_backend.h  fake_random.c  fake_random.h  fake_usb_backend.c  fake_usb_backend.h  fake_wifi_backend.c  fake_wifi_backend.h
tests/host/support/: test_assert.c  test_assert.h  test_memory.c  test_memory.h  test_temp_dir.c  test_temp_dir.h
webapp/: README.md  eslint.config.js  index.html  package-lock.json  package.json  stylelint.config.mjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts
webapp/src/: App.tsx  README.md  main.tsx  styles.css
(+29 files in other folders)
